--- a/client/.env
+++ b/client/.env
@@ -12,7 +12,7 @@ SERVER_PORT=7000
 PASSWORD=passwd
 
 #log directory name in remote server
-STATION_NAME=STATION01
+ID=STATION01
 
 #generate logs each N milliseconds
 POLLING_INTERVAL_MS=30000
